use compose native distribution tasks to create release artifacts (#8)
- disable proguard obfuscation
- use compose native distribution packaging
- adjust workflows for github